# py2snes

./: .bumpversion.cfg  .gitignore  .travis.yml  LICENSE  README.md  putfile.py  pyproject.toml  requirements.txt  setup.py
py2snes/: __init__.py
py2snes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: msu_pack_switch.py
src/py2snes/: __init__.py
src/py2snes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
